remove username from user
