# src/modules/user/repositories/UsersDTO.ts
@@ -2,6 +2,5 @@ export interface ICreateUserDTO {
   name: string;
   email: string;
   password: string;
-  username: string;
   driverLicense: string;
 }
