# src/modules/user/useCases/CreateUser/CreateUserController.ts
@@ -5,7 +5,7 @@ import { CreateUserUseCase } from './CreateUserUseCase';
 
 export class CreateUserController {
   public async handle(request: Request, response: Response): Promise<Response> {
-    const { driverLicense, email, name, password, username } = request.body;
+    const { driverLicense, email, name, password } = request.body;
 
     const createUserUseCase = container.resolve(CreateUserUseCase);
 
@@ -14,7 +14,6 @@ export class CreateUserController {
       email,
       name,
       password,
-      username,
     });
 
     return response.status(201).json(user);
